--- a/CSS/moreFonts/style.css
+++ b/CSS/moreFonts/style.css
@@ -15,7 +15,7 @@ h1 {
   padding-top: 100px;
   text-align: left;
   width: 60%;
-  font-family: "Georgia", Garamond, serif;
+  font-family: "Playfair Display", serif;
 }
 
 h2 {
